[package]
name = "bambu-stream"
version = "0.1.0"
edition = "2024"

[dependencies]
rumqttc = "0.25"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tokio-stream = "0.1"
futures = "0.3"
dotenvy = "0.15"
anyhow = "1"
serde_json = "1"
arrow = "58"
arrow-flight = "58"
tonic = "0.14"
